--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'Q'
 - !lcsh 'Science'
+- GITenberg
 title: The Birth-Time of the World and Other Scientific Essays
 url: http://www.gutenberg.org/ebooks/16614
